src/objects/QPMS__Queue_Assignment__mdt.object
<CustomObject>
    <fields>
        <fullName>QPMS__Module_API_Name__c</fullName>
        <label>Module API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QPMS__Complaint__c</fullName>
                    <default>true</default>
                    <label>QPMS__Complaint__c</label>
                </value>
                <value>
                    <fullName>QPMS__Audit__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__QueueId__c</fullName>
        <label>QueueId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Queue_Mapping_Value__c</fullName>
        <label>Queue Mapping Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Unique_Id__c</fullName>
        <inlineHelpText>Combination of &quot;Module API Name | Queue Mapping Value&quot;</inlineHelpText>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Queue Assignment</label>
    <pluralLabel>Queue Assignments</pluralLabel>
</CustomObject>